--- a/backend-doc/classuser_1_1_user.html
+++ b/backend-doc/classuser_1_1_user.html
@@ -173,7 +173,7 @@ Public Attributes</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-
+<pre class="fragment"> Calculate intensity - warning hold configuration must be set in advance and SetReference will yield the correct maxload for the hold configuration </pre> 
 </div>
 </div>
 <a id="abfb2cf30cc4265eb75219f1e336fc566"></a>
@@ -207,7 +207,7 @@ Public Attributes</h2></td></tr>
         </tr>
       </table>
 </div><div class="memdoc">
-
+<pre class="fragment"> Find out the maximal parameters for a given hold configuration </pre> 
 </div>
 </div>
 <h2 class="groupheader">Member Data Documentation</h2>
