--- a/frontend/mini-web/index.html
+++ b/frontend/mini-web/index.html
@@ -39,7 +39,7 @@ function onMessageArrived(message) {
 }
     </script>
     <body>
-        <div id="board"><img src=http://raspi-hangboard:5000/board/img/></div>
+        <div id="board"><img src="http://raspi-hangboard:5000/board/img"/></div>
         <div id="content">Test</div>
     </body>
 </html>
